2020-09-update: Relatively minor changes Java version update (11) Library updates Apply checkstyle Method parameters final As far as possible, all member fields are final