@@ -44,27 +44,25 @@ public class HGQLVocabulary {
     public static final String HGQL_OF_TYPE = HGQL_NAMESPACE + "ofType";
     public static final String HGQL_KIND = HGQL_NAMESPACE + "kind";
 
-
     public static final String RDF_TYPE = "http://www.w3.org/1999/02/22-rdf-syntax-ns#type";
 
-
-    public static final Map<String, String> SCALAR_TYPES = Collections.unmodifiableMap(new HashMap<String, String>() {{
-        put("String", HGQL_STRING);
-        put("Int", HGQL_Int);
-        put("Boolean", HGQL_Boolean);
-        put("ID", HGQL_ID);
-    }});
+    public static final Map<String, String> SCALAR_TYPES = Map.of(
+        "String", HGQL_STRING,
+        "Int", HGQL_Int,
+        "Boolean", HGQL_Boolean,
+        "ID", HGQL_ID
+    );
 
     public static final Map<String, GraphQLOutputType> SCALAR_TYPES_TO_GRAPHQL_OUTPUT =
-            Collections.unmodifiableMap(new HashMap<String, GraphQLOutputType>() {{
-        put(HGQL_STRING, GraphQLString);
-        put(HGQL_Int, GraphQLInt);
-        put(HGQL_Boolean, GraphQLBoolean);
-        put(HGQL_ID, GraphQLID);
-    }});
+            Map.of(
+                HGQL_STRING, GraphQLString,
+                HGQL_Int, GraphQLInt,
+                HGQL_Boolean, GraphQLBoolean,
+                HGQL_ID, GraphQLID
+            );
 
-    public static final Map<String, String> JSONLD = Collections.unmodifiableMap(new HashMap<String, String>() {{
-        put("_id", "@id");
-        put("_type", "@type");
-    }});
+    public static final Map<String, String> JSONLD = Map.of(
+        "_id", "@id",
+        "_type", "@type"
+    );
 }
